--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -26,11 +26,11 @@
     </div>
     <br>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white" *ngIf="!showData">
       <span>สร้างกระดาษทำการประเมินความเสี่ยงโครงการด้านงบประมาณ</span>
     </div>
 
-    <div class="ui attached segment">
+    <div class="ui attached segment" *ngIf="!showData">
       <div class="ui form">
         <div class="inline fields">
           <div class="four wide field "></div>
