missed for change only risk-page 3

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -26,13 +26,13 @@
     </div>
     <br>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white" *ngIf="!showData">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
       <span>สร้างกระดาษทำการประเมินความเสี่ยงโครงการด้านประสิทธิภาพ
       </span>
     </div>
 
 
-    <div class="ui attached segment" *ngIf="!showData">
+    <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
           <div class="four wide field "></div>
