--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -3,10 +3,8 @@
     <a href="#" class="header item" style=" color:White " *ngIf="authService.getLogin()">
         {{ 'APP_NAME' | translate }}
     </a>
-    <a  href="#" class="ui header center aligned item grid"
-        style="color:White;width: calc(100% - 500px);font-size: 20px;"
-        *ngIf="!authService.getLogin()">
-        ระบบบริหารจัดการตรวจปฎิบัติการแบบบูรณาการ
+    <a href="#" class="ui header center aligned item grid" style="color:White;width: calc(100% - 500px);font-size: 20px;" *ngIf="!authService.getLogin()">
+        ระบบบริหารจัดการ&nbsp;&nbsp;การตรวจปฏิบัติการแบบบูรณาการ
     </a>
     <div class="ui simple dropdown item" *ngIf="authService.getLogin()" style="color:White;">
         ตรวจสอบภายใน
