--- a/workspace/ims-client/src/app/buckwaframework/project/pages/login/login.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/login/login.html
@@ -1,11 +1,11 @@
 <div class="ui middle aligned center aligned grid" style="margin-top: 5px;">
     <div class="column" style="margin-top: 80px;">
-        <div class="ui warning message" *ngIf="loginInvalid">
+        <!-- <div class="ui warning message" *ngIf="loginInvalid">
             <i class="close icon" (click)="loginInvalid=false;"></i>
             <div class="header">
                 Invalid Username or Password
             </div>
-        </div>
+        </div> -->
 
         <form [formGroup]="loginForm" class="ui large form" [ngClass]="ngLoading">
             <div class="ui stacked segment">
@@ -40,7 +40,7 @@
                         &nbsp;
                     </div>
                     <div class="twelve wide field">
-                        <div class="ui fluid large teal submit button" (click)="login()">เข้าสู่ระบบ</div>
+                        <div class="ui fluid large blue submit button" (click)="login()">เข้าสู่ระบบ</div>
                     </div>
                 </div>
 
