--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -116,14 +116,10 @@
         <div class="ui right aligned grid">
           <div class="sixteen wide column">
             <button class="ui mini primary button">
-              <i class="print icon"></i>
-              พิมพ์
-            </button>
-            <button class="ui mini primary button">
               <i class="save icon"></i>
               บันทึก
             </button>
-            <div id="export" class="ui primary buttons">
+            <div id="export" class="ui mini primary buttons">
               <div class="ui mini button">ส่งออก</div>
               <div class="ui floating dropdown icon button">
                 <i class="dropdown icon"></i>
