--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
@@ -82,14 +82,10 @@
         <div class="ui right aligned grid">
           <div class="sixteen wide column">
             <button class="ui mini primary button">
-              <i class="print icon"></i>
-              พิมพ์
-            </button>
-            <button class="ui mini primary button">
               <i class="save icon"></i>
               บันทึก
             </button>    
-              <div  id="export" class="ui floating dropdown icon button primary">
+              <div  id="export" class="ui floating mini dropdown icon button primary">
                 ส่งออก
                 <i class="dropdown icon"></i>
                 <div class="menu">
