--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-2/int07-5-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-2/int07-5-2.component.html
@@ -53,15 +53,11 @@
     <div class="ui right aligned grid">
       <div class="sixteen wide column">
           <button class="ui mini primary button" routerLink="/int07-6">
-            10910 บัญชีเงินประกันอื่น
+            ส่งเงินบัญชีเจ้าหนี้ อปท
           </button>
           <button class="ui mini primary button" routerLink="/int07-7">
-            10658 บัญชีเงินสินบนและเงินรางวัล
-          </button>
-        <button class="ui mini primary button">
-          <i class="print icon"></i>
-          พิมพ์
-        </button>
+            เคลื่อนไหวเงินฝากคลัง  
+          </button>       
         <button class="ui mini primary button">
           <i class="save icon"></i>
           บันทึก
