--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-3/int07-5-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-3/int07-5-3.component.html
@@ -42,10 +42,10 @@
         10778 บัญชีเจ้าหนี้ อปท.
       </a>
       <a class="item  active" routerLink="/int07-5-3">
-        10910 บัญชีเงินประกันอื่น
+        ส่งเงินบัญชีเจ้าหนี้ อปท
       </a>
       <a class="item" routerLink="/int07-5-4">
-        10658 บัญชีเงินสินบนและเงินรางวัล
+        เคลื่อนไหวเงินฝากคลัง  
       </a>
     </div>
   
@@ -57,11 +57,7 @@
             </button>
             <button class="ui mini primary button" routerLink="/int07-7">
               10658 บัญชีเงินสินบนและเงินรางวัล
-            </button>
-          <button class="ui mini primary button">
-            <i class="print icon"></i>
-            พิมพ์
-          </button>
+            </button>        
           <button class="ui mini primary button">
             <i class="save icon"></i>
             บันทึก
