--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-4/int07-5-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-4/int07-5-4.component.html
@@ -44,7 +44,7 @@
         10910 บัญชีเงินประกันอื่น
       </a>
       <a class="item  active" routerLink="/int07-5-4">
-        10658 บัญชีเงินสินบนและเงินรางวัล
+        10658 บัญชีเงินรับฝากอื่น
       </a>
      
 
@@ -54,15 +54,11 @@
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
             <button class="ui mini primary button" routerLink="/int07-6">
-              10910 บัญชีเงินประกันอื่น
+              ส่งเงินบัญชีเจ้าหนี้ อปท
             </button>
             <button class="ui mini primary button" routerLink="/int07-7">
-              10658 บัญชีเงินสินบนและเงินรางวัล
-            </button>
-          <button class="ui mini primary button">
-            <i class="print icon"></i>
-            พิมพ์
-          </button>
+              เคลื่อนไหวเงินฝากคลัง  
+            </button>         
           <button class="ui mini primary button">
             <i class="save icon"></i>
             บันทึก
