--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -46,12 +46,7 @@
                     <div class="fourteen wide field"></div>
                     <div class="two wide field">
                         <input type="hidden" id="exciseId" value="EX" />
-                        <button
-                            type="button"
-                            id="exciseBtn"
-                            style="margin-left: auto"
-                            class="ui mini primary button right floated"
-                            (click)="linkToDetail()">
+                        <button type="button" id="exciseBtn" style="margin-left: auto" class="ui mini primary button right floated" (click)="linkToDetail()">
                             <i class="add icon"></i>
                             เพิ่มข้อมูล
                         </button>
@@ -81,8 +76,8 @@
                         <div class="inline fields">
                             <div class="sixteen wide field">
                                 <label style="width: 5em;">พิกัด</label>
-                                <select class="ui dropdown">
-                                    <option value=""></option>
+                                <select class="ui dropdown" name="coordinates" id="coordinates" (change)="changeCoordinates()">
+                                    <option></option>
                                 </select>
                             </div>
                         </div>
